feat(ui): implementa ComboBox filtrable y mejora validación de FormField
Estas mejoras se implementan para proporcionar una experiencia de usuario más fluida en la selección de datos y asegurar la integridad de la entrada numérica en los formularios.

- Añade la propiedad `IsFilterEnabled` a `FormComboBox`, permitiendo la búsqueda y filtrado de elementos en tiempo real.
- Mejora la validación de entrada en `FormField` para tipos `Number` y `Decimal`, mostrando tooltips de error al usuario en tiempo real.
- Refactoriza las propiedades de peso (`Pde_pb`, `Pde_pt`, `Pde_pn`) en `PesajesDetalleItemDto` a tipo `string?` para mejorar la gestión en la interfaz de usuario.
- Implementa validación en `PesajesDetalleItemDto` para asegurar que el peso de tara no exceda el peso bruto, reseteando a '0' si es inválido.
- Actualiza la vista y el modelo `MantPesajes` para integrar el nuevo ComboBox filtrable y manejar las propiedades de peso como string.

--- a/CacelApp/Shared/Controls/Form/FormComboBox.xaml
+++ b/CacelApp/Shared/Controls/Form/FormComboBox.xaml
@@ -20,6 +20,7 @@
               IsEnabled="{Binding IsEnabled, RelativeSource={RelativeSource AncestorType=UserControl}}"
               ItemsSource="{Binding RelativeSource={RelativeSource AncestorType=UserControl}, Path=Options}"
               DisplayMemberPath="Label"
-              SelectedValuePath="Value" Foreground="{DynamicResource MaterialDesignBody}"/>
+              SelectedValuePath="Value" Foreground="{DynamicResource MaterialDesignBody}"
+              PreviewKeyDown="ComboBoxControl_PreviewKeyDown"/>
     </Grid>
 </UserControl>
